Allow non-English for program names; useful w/ -e

The old code used Latin1() to check program names and also used
QFile::encodeName().

Thanks to Eugene Shalygin for report and research.

Example:
cp `which vi` ./编辑器
konsole -e ./编辑器
BUG: 297529
FIXED-IN: 2.8.3